# NeuralFlight

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.MD
config/: drone_config.yaml  eeg_config.yaml  eeg_config_old.yaml  gesture_config.yaml  hand_config.yaml
demos/: hand_gesture_demo.py  head_gesture_demo.py  motor_imagery_demo.py  train_model.py
docs/: architecture.md
models/baseline_2/: eegnet_best.pth
notebooks/: eeg_analysis.ipynb
src/neuralflight/controllers/: drone_controller.py
src/neuralflight/eeg/: dataset.py
src/neuralflight/gestures/: hand_detector.py  head_detector.py
src/neuralflight/models/: eegnet.py  eegnet_residual.py
src/neuralflight/models/pretrained/: eegnet_best.pth
src/neuralflight/simulator/: drone_sim.py
src/neuralflight/utils/: config_loader.py
